; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_rc80211_pid_algo.c_rate_control_pid_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_rc80211_pid_algo.c_rate_control_pid_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rc_pid_info = type { %struct.rc_pid_info*, %struct.rc_pid_debugfs_entries }
%struct.rc_pid_debugfs_entries = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @rate_control_pid_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rate_control_pid_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.rc_pid_info*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.rc_pid_info*
  store %struct.rc_pid_info* %5, %struct.rc_pid_info** %3, align 8
  %6 = load %struct.rc_pid_info*, %struct.rc_pid_info** %3, align 8
  %7 = getelementptr inbounds %struct.rc_pid_info, %struct.rc_pid_info* %6, i32 0, i32 0
  %8 = load %struct.rc_pid_info*, %struct.rc_pid_info** %7, align 8
  %9 = call i32 @kfree(%struct.rc_pid_info* %8)
  %10 = load %struct.rc_pid_info*, %struct.rc_pid_info** %3, align 8
  %11 = call i32 @kfree(%struct.rc_pid_info* %10)
  ret void
}

declare dso_local i32 @kfree(%struct.rc_pid_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
